base/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
  - name: main
    protocol: TCP
    port: 80
    targetPort: main-port
---
